--- a/templates/email/password_reset_confirm.html
+++ b/templates/email/password_reset_confirm.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Reset Your Password</title>
+    <title>Passwort zurücksetzen</title>
 </head>
 <body>
-    <h1>Reset Your Password</h1>
-    <form method="post" action="{% url 'password_reset_confirm' %}">
+    <h1>Passwort zurücksetzen</h1>
+    <form method="post" action="{% url 'password_reset_confirm' uidb64=uidb64 token=token %}">
         {% csrf_token %}
-        <input type="hidden" name="user_id" value="{{ user.id }}">
-        <label for="new_password">New Password:</label>
-        <input type="password" name="new_password" id="new_password" required>
-        <button type="submit">Reset Password</button>
+        <label for="new_password1">Neues Passwort:</label>
+        <input type="password" id="new_password1" name="new_password1" required>
+        <br>
+        <label for="new_password2">Neues Passwort bestätigen:</label>
+        <input type="password" id="new_password2" name="new_password2" required>
+        <br>
+        <button type="submit">Passwort zurücksetzen</button>
     </form>
 </body>
 </html>
