--- a/templates/email/password_reset_email.html
+++ b/templates/email/password_reset_email.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <p>Hello,</p>
+    <p>Hello {{ user }},</p>
     <p>We've received a request to reset your password. Please click on the link below to reset your password:</p>
     <p><a href="{{ reset_password_url }}">Reset Password</a></p>
     <p>If you did not request this password reset, you can safely ignore this email.</p>
